# Tabletop-City-Management

./: .gitignore  Dockerfile  README.md  pyproject.toml
.scripts/docker/: build.sh  run.sh  stop.sh
.scripts/poetry/: run.sh
api/: main.py
api/controllers/: buildings.py  cities.py  forward_time.py  reports.py
api/factories/: buildings.py  cities.py  city_buildings.py  forward_time.py
api/models/: buildings.py  city.py  city_buildings.py  enums.py  forward_time.py
api/repositories/: __init__.py  buildings.py  cities.py  city_buildings.py
api/services/: __init__.py  buildings.py  cities.py  city_buildings.py  forward_time.py  reports.py  revenue.py  taxes.py
api/utils/: config.json  config.py
db/: config.py  migrations.py
db/seed/: buildings.py
templates/: city_report.html
